# mercerbot

./: .gitignore  README.md
mercerbot_bringup/: package.xml  setup.cfg  setup.py
mercerbot_controller/: CMakeLists.txt  CTestConfiguration.ini  Makefile  colcon_command_prefix_build.sh  colcon_command_prefix_build.sh.env  install_manifest.txt  mercerbot_controller.xml  package.xml
mercerbot_controller/.cmake/api/v1/reply/: codemodel-v2-32a93bd2afec6d27fc0f.json  directory-.-ba8a6d89d34c8dd120a0.json  index-2025-11-18T16-00-47-0049.json  target-ament_cmake_python_build_arduinobot_controller_egg-0cfd4a1d83c869764a31.json  target-ament_cmake_python_copy_arduinobot_controller-ed5ae1aa1ef9e2777982.json  target-arduinobot_controller-c15a2cca575853c97901.json  target-arduinobot_controller_uninstall-1437c151329be0021068.json  target-slider_control-2f58eb77d79e8e6dde31.json  target-uninstall-6ddba861c4a22781a95c.json
mercerbot_controller/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
mercerbot_controller/include/mercerbot_controller/: mercerbot_interface.hpp
mercerbot_controller/launch/: controller.launch.py  slider_controller.launch.py
mercerbot_controller/src/: mercerbot_interface.cpp
mercerbot_description/: CMakeLists.txt  package.xml
mercerbot_joint_pub/: package.xml  setup.cfg  setup.py
mercerbot_joint_states_corrected/: package.xml  setup.cfg  setup.py
mercerbot_moveit/: CMakeLists.txt  CTestConfiguration.ini  Makefile  colcon_command_prefix_build.sh.env  install_manifest.txt  package.xml
mercerbot_msgs/: CMakeLists.txt  Makefile  (+15 more)
(+205 files in other folders)
